# python-project-50

./: .gitignore  Makefile  README.md  coverage.xml  gendiff.py  pyproject.toml  requirements.txt  ruff.toml  setup.cfg
.github/workflows/: my-check.yml
files/: file3.json
gendiff/: __init__.py  file1.json  gendiff_fun.py
gendiff/codes_to_import/: format_value.py  json_convert.py  set_status.py
gendiff/formatters/: format_value.py  plain_convert.py  stylish_convert.py
gendiff/scripts/: __init__.py  gendiff.py  gendiff_script.py  generate_diff.py  set_diff_status.py
scripts/: gendiff.py  gendiff_script.py
tests/: file1.json  gendiff_test.py
tests/test_data/: file2.json
