[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Korvo-iam <emilaubakirov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"



[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
coverage = "7.6.4"
flake8 = "7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
