[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Korvo-iam <emilaubakirov@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" },
]


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"



[tool.poetry.dependencies]
python = "^3.11"
pytest-cov = "^5.0.0"
coverage = "^7.6"
pytest = ">=8.3.3"
flake8 = "^7.1"
pyyaml = "^6.0"

[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
requires = ["hatchling"]
build-backend = "hatchling.build"
