[project]
name = "hexlet-code"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest-cov>=6.1.1",
    "pyyaml>=6.0.2",
]

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"

[project.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gendiff"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.4.3",
]

[tool.ruff]
line-length = 80
select = ["E", "F", "I", "C90"]
ignore = ["C901"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
